--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,7 +216,7 @@ body {
     #files_card#folders_card { border:1px solid #444444; /* height: auto; overflow: auto; */ }
 
     #info {
-        background-color: rgba(0, 0, 0, 1) !important;
+        background-color: #252525;
     }
 
     .inlinesearch {
