--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -18,7 +18,7 @@
         top: 0;
         left: 0;
 
-        margin-left: -8px;
+        /* margin-left: -8px; */
         /* width: 100%; */
         /* height: 23px; */
     }
@@ -79,5 +79,7 @@
     }
 
     progress::-webkit-progress-value {background-color: #aaa !important;}
+
+
 
 }
