--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ body {
         color: #fff;
     }
 
-    progress::-webkit-progress-value { background: blue; }
+
 
     .settings_label {
         font-weight: bold;
@@ -522,7 +522,7 @@ body {
     background:rgba(0,0,0,.075);
     position: fixed;
     bottom: 0;
-    padding: 5px;
+    /* padding: 5px; */
     width: 210px;
     /* top: 50%; */
     /* left: 50%; */
@@ -713,11 +713,17 @@ a {
 
 .image {
 
-    height: 32px !important;
-    width: 32px !important;
+    height: 34px !important;
+    width: 34px !important;
     /* border:2px solid #000000 !important; */
     /* background:#000000 !important; */
 }
+
+video {
+    border: 4px solid #000;
+    height: 48px;
+}
+
 
 embed {
     overflow: hidden;
@@ -1002,15 +1008,19 @@ h5 {
     margin-right: 0px;
     height: 100%;
     margin-left: 0px;
-    /* overflow-x: hidden; */
-    /* overflow-y: scroll; */
+    overflow-x: hidden;
+    overflow-y: scroll;
     /* padding-right: 20px; */
     padding-left: 20px;
     padding-top: 10px;
     /* padding:20px; */
     padding-bottom: 40px;
     z-index: 0;
+
 }
+
+
+
 
 #main_view:hover {
   border:none !important;
