properties and find updates

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -2,23 +2,8 @@
 @media (prefers-color-scheme: dark) {
 
     #sidebar {
-        outline: none;
-        width: 0;
-        position: fixed;
-        z-index: 0 !important;
-        left: 0px;
         background-color: #262626 !important;
         color: #f7f7f7 !important;
-        /* top: 40px; */
-        height:100%;
-        padding-top: 6px;
-        padding-left: 6px;
-        margin-left: 40px;
-        /* min-width: 200px; */
-        overflow: scroll;
-        scroll-behavior: smooth;
-        /* scrollbar-width: 2px !important; */
-        /* scrollbar-width: thin; */
     }
 
     #sidebar .title {
@@ -29,20 +14,6 @@
         color: rgb(65, 131, 196, 0.8) !important;
     }
 
-    #sidebar_items .header {
-        /* background-color: #3a3a3a; */
-        font-size: 10px;
-        margin-bottom: 5px;
-        border-radius: 4px;
-        padding: 4px;
-
-    }
-
-    #sidebar_items .item {
-        width: 100%;
-        padding: 4px;
-    }
-
     #sidebar_items .item:hover {
 
         /* width: 100%; */
@@ -51,28 +22,6 @@
         border-radius: 5px;
         cursor: pointer;
 
-    }
-
-    /* #sidebar_items .icon { */
-        /* height: 23px; */
-        /* width: 23px; */
-    /* } */
-
-    #sidebar_items .icon:hover {
-        cursor: pointer;
-    }
-
-    #sidebar_items .nav_header {
-        font-size: 1.1em;
-        display: inline-block;
-    }
-
-    #sidebar_items .item .nav_header a {
-        display: inline-block;
-    }
-
-    #sidebar #workspace {
-        font-size: 0.8em;
     }
 
     #sidebar_items .item a {
@@ -104,7 +53,7 @@
     }
 
     #sidebar_items label {
-        font-size: 1em !important;
+        /* font-size: 1em !important; */
     }
 
     #sidebar_items hr {
@@ -113,17 +62,10 @@
 
     /* Find labels */
     #find_div .label {
-        font-size: 10px !important;
+        /* font-size: 10px !important; */
         font-weight: normal !important;
         color: #069 !important;
     }
-
-    /* Find input */
-    .find_input {
-        font-size: 10px !important;
-        height:20px !important; width: 100% !important;
-    }
-
 
     #find_div .label {
         font-weight: normal !important;
@@ -190,25 +132,16 @@
 @media (prefers-color-scheme: light) {
 
     #sidebar {
-        border-right: 1px solid #cfcfcf !important;
-        outline: none;
-        width: 0;
-        position: fixed;
-        z-index: 0 !important;
-        left: 0px;
         background-color: #f7f7f7 !important;
         color: #cfcfcf !important;
-        height:100%;
-        padding-top:10px;
-        padding-left: 12px;
-        margin-left: 40px;
-        min-width: 200px;
-        overflow: hidden;
-        scroll-behavior: smooth;
     }
 
     #sidebar_items .header {
         background: transparent !important;
+    }
+
+    #sidebar_items .content {
+        color: #000000 !important;
     }
 
     /* Find labels */
@@ -232,7 +165,7 @@
     #minibar {
         margin-left: -4px;
         padding: 10px;
-        width: 48px;
+        width: 38px;
         float:left;
         background-color: #cfcfcf;
         height:110%
@@ -286,7 +219,62 @@
         font-weight: bold !important;
     }
 
+}
 
+#minibar {
+    padding-top: 25px !important;
+}
+
+#sidebar {
+    font-size: 11px !important;
+    outline: none;
+    width: 0;
+    position: fixed;
+    z-index: 0 !important;
+    left: 0px;
+    height:100%;
+    margin-top: 15px;
+    padding-left: 6px;
+    margin-left: 40px;
+    overflow: scroll;
+    scroll-behavior: smooth;
+
+}
+
+#sidebar_items .icon:hover {
+    cursor: pointer;
+}
+
+#sidebar_items .nav_header {
+    display: inline-block;
+}
+
+#sidebar_items .item .nav_header a {
+    display: inline-block;
+}
+
+#sidebar_items .header {
+    /* font-size: 10px; */
+    margin-bottom: 5px;
+    border-radius: 4px;
+    padding: 4px;
+
+}
+
+#sidebar_items .item {
+    width: 100%;
+    padding: 4px;
+}
+
+/* Find input */
+.find_input {
+    font-size: 10px !important;
+    height:20px !important; width: 100% !important;
+}
+
+#find_div .label {
+    font-size: 10px !important;
+    font-weight: normal !important;
 }
 
 #sidebar_items {
