--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -18,6 +18,8 @@
         top: 0;
         left: 0;
 
+        /* padding-top: 40px; */
+
         /* margin-left: -8px; */
         /* width: 100%; */
         /* height: 23px; */
@@ -32,6 +34,7 @@
         font-size: 10px;
 
         position: relative;
+        margin-top: 18px;
 
         border-radius: 2px;
         border-top: 1px solid #000;
@@ -66,7 +69,7 @@
         left: 0;
 
         /* margin-left: -5px; */
-        margin-top: 24px;
+        margin-top: 40px;
 
         /* padding-top: 23px; */
         padding: 15px;
