--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -14,6 +14,10 @@
         color: rgb(65, 131, 196, 0.8) !important;
     }
 
+    #sidebar_items {
+        /* overflow: hidden; */
+    }
+
     #sidebar_items .item:hover {
 
         /* width: 100%; */
