--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -471,6 +471,7 @@ body {
     #main_view {
         background-color: #f7f7f7 !important;
         color:#000;
+        /* overflow: hidden; */
     }
 
 }
