--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,7 @@ body {
     }
 
     #navigation_menu {
+        top: -20px;
         background: #303134 !important;
         font-size: 1em !important;
         border: none !important;
@@ -84,6 +85,20 @@ body {
 
     #navigation_menu #status {
         font-size: 10px;
+    }
+
+    #hamburger_menu {
+        position: fixed;
+        padding: 10px;
+        right: 0;
+        margin-top: 25px;
+        margin-right: 25px;
+        background: #252525;
+        width: 400px;
+        height: 150px;
+        color: #fff;
+        z-index: 1000;
+        border-radius: 15px;
     }
 
     #breadcrumbs::selection {
@@ -118,6 +133,7 @@ body {
     }
 
     .active {
+        padding: 6px !important;
         background-color: #444444 !important;
     }
 
@@ -326,6 +342,21 @@ body {
         border: none !important;
     }
 
+    #hamburger_menu {
+        position: fixed;
+        padding: 10px;
+        right: 0;
+        margin-top: 25px;
+        margin-right: 25px;
+        background: #efefef;
+        width: 400px;
+        height: 150px;
+        color: #000;
+        z-index: 1000;
+        border-radius: 15px;
+        /* border: 1px solid #000 */
+    }
+
     .ui.menu {
         font-size: 10px !important;
     }
@@ -476,19 +507,7 @@ body {
 
 }
 
-#hamburger_menu {
-    position: fixed;
-    padding: 10px;
-    right: 0;
-    margin-top: 25px;
-    margin-right: 25px;
-    background: #252525;
-    width: 400px;
-    height: 150px;
-    color: #fff;
-    z-index: 1000;
-    border-radius: 15px;
-}
+
 
 /* #hamburger_menu a:hover {
     color:#069 !important;
