--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -80,7 +80,9 @@
     }
 
     #search_results {
-
+        height:100%;
+        overflow: auto;
+        margin-bottom: 50px;
     }
 
     #search_progress {
