--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -67,6 +67,11 @@
         border-color: #3a3a3a !important;
     }
 
+    #find::selection {
+        background: #069;
+        color: #cfcfcf;
+    }
+
     /* Find labels */
     #find_div .label {
         /* font-size: 10px !important; */
